# BachelorThesisGCC

./: .gitignore  CMakeLists.txt  README.md  big_quicksort.chad  chad  chad.s  dockerfile  factorial.chad  fibonacci.chad  mergesort.chad  mergesort.py  print  print.s  prog.out_tests  test.chad  test.cpp  test.txt  test2.chad  test2.txt
.github/workflows/: lint.yaml  test.yaml  test.yml
benchmark/: benchmark.csv  benchmark.py  chad  chad.s  fibonacci_41.chad  fibonacci_42.chad  fibonacci_43.chad  fibonacci_44.chad  fibonacci_45.chad  fibonacci_46.chad  matrix_1000.chad  matrix_400.chad  matrix_600.chad  matrix_800.chad  mergesort_10M.chad  mergesort_12M.chad  mergesort_4M.chad  mergesort_6M.chad  mergesort_8M.chad
src/: ast.cpp  ast.hpp  ast_adapt.hpp  compiler.cpp  compiler.hpp  compiler_error.hpp  config.hpp  main.cpp  main.hpp  visitor.cpp  visitor.hpp
src/IR/: code_generation.cpp  code_generation.hpp  emit.cpp  emit.hpp  ir.cpp  ir.hpp  link_instructions.cpp  link_instructions.hpp  register_allocation.cpp  register_allocation.hpp
src/error/: ast_error.hpp  base_error.hpp  compiler_error.hpp
src/grammar/: ast.hpp  integer.cpp  integer.hpp  integer_def.hpp  sum.cpp  sum.hpp  sum_def.hpp
src/grammar/ast/: sum_ast.hpp  sum_ast_adapt.hpp
src/grammar/binop_exp/: binop_exp.cpp  binop_exp.hpp  binop_exp_ast.hpp  binop_exp_ast_adapt.hpp  binop_exp_def.hpp
src/grammar/integer/: integer.cpp  integer.hpp  integer_ast.hpp  integer_ast_adapt.hpp  integer_def.hpp
src/optimizations/: coloring_by_simplification.cpp  coloring_by_simplification.hpp  graph.cpp  graph.hpp  liveness_analysis.cpp  liveness_analysis.hpp  pp.cpp  pp.hpp
src/parser/: ast.cpp  ast.hpp  grammar.cpp  grammar.hpp  parser.cpp  parser.hpp
src/semantics/: semantics_error.hpp  symbol_collection.cpp  symbol_collection.hpp  symbol_collection_phase2.cpp  symbol_collection_phase2.hpp  symbol_collector.cpp  symbol_table.cpp  symbol_table.hpp
src/type_checking/: return_checker.cpp  return_checker.hpp  typeChecking.cpp  typeChecking.hpp  type_checkker_pseudo.txt
tests/: generate_random_values.py  random_values.txt  testing_tests.cpp
tests/assemblyTests/: advanced_structs.chad  assembly_tests.cpp  badCode.chad  breakcont.chad  dynamic_linking.chad  nestedwhile.chad  quicksort.chad  return_structs.chad  static_linking.chad  static_linking_read.chad  static_linking_write.chad  testBinop.chad  test_array_argument.chad  test_array_init.chad  test_arrays.chad  test_arrays_wrong.chad  test_assembly_array_init.cpp  test_assembly_arrays.cpp  test_assembly_arrays_arguments.cpp  test_assembly_basic.cpp  test_assembly_beta_access.cpp  test_assembly_beta_objects.cpp  test_assembly_binop.cpp  test_assembly_dynamic_link.cpp  test_assembly_functions.cpp  test_assembly_many_variables.cpp  test_assembly_print  test_assembly_quicksort.cpp  test_assembly_static_link.cpp  test_assembly_structs.cpp  test_assembly_while.cpp  test_fibonacci.chad  test_function_call.chad  test_function_parameters.chad  test_function_return.chad  test_if_else.chad  test_many_variables.chad  test_precdence.chad  test_precedence.chad  test_print.chad  (+2 more)
tests/lib/: testing_assembly_lib.cpp  testing_assembly_lib.hpp  testing_main_lib.cpp  testing_main_lib.hpp  testing_parse_lib.cpp  testing_parse_lib.hpp  testing_symbol_collection_lib.cpp  testing_symbol_collection_lib.hpp  testing_type_check_lib.cpp  testing_type_check_lib.hpp
tests/main_tests/: entireProgram.chad  symbolcollOnly.chad  test_cases_main.cpp
tests/parserTests/: FuncMixedMultiliner.txt  breakcontinue.chad  compIfElse.chad  compIfElseElseElse.chad  deepNestIfElse.chad  funcCall.chad  funcCall2.chad  funcCallComplex.chad  funcCallfuncParam.chad  prog1.chad  prog2.chad  simple.chad  test_cases.cpp  test_cases_parser.cpp  testing_parse_lib.cpp  testing_parse_lib.hpp
tests/symbolCollectionTests/: SymAndFuncSameName.chad  brkcont.chad  brkcontfail.chad  brkcontfail2.chad  declare_not_initialized.chad  paramExists.chad  succTest1.chad  test.chad  test_cases_symbol_collection.cpp
tests/typeTests/: arrayStuff.chad  functionParam.chad  return.chad  shadow.chad  test_cases.cpp  test_cases_type_checking.cpp
